# raytracer

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  RayTracer.sln
RayTracer/: Line.cpp  Line.h  Main.cpp  Material.cpp  Material.h  Plane.cpp  Plane.h  RayTracer.vcxproj  RayTracer.vcxproj.filters  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h  Vector.h
examples/: scene1.cfl
source/: CMakeLists.txt  Line.cpp  Line.h  Main.cpp  Material.h  Plane.cpp  Plane.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h  Vector.h  main.cpp
